syntax = "proto3";

package pb;


service BlogServer {
    rpc SayHello (HelloRequest) returns (HelloReply){}
    rpc GetList (GetListRequest) returns (GetListReply){}
}

message HelloRequest{
     string name = 1;
}
message HelloReply{
 string message =1;
}

message GetListRequest{
      string url=1;
}
message GetListReply{
    message Data {
      string img=1;
      string title =2;
      string description=3;
      string createAt=4;
      repeated string tags=5;
      string category=6;
      string link=7;
    }
    repeated Data data =1;
    string next=2;
}
